@@ -248,6 +248,12 @@ Player::Player(bool _cameraMode) : cameraMode(_cameraMode)
       stereo3DY = fFalse; // The default
    m_fStereo3DY = (stereo3DY == 1);
 
+   int scaleFX_DMD;
+   hr = GetRegInt("Player", "ScaleFXDMD", &scaleFX_DMD);
+   if (hr != S_OK)
+       scaleFX_DMD = fFalse; // The default
+   m_scaleFX_DMD = (scaleFX_DMD == 1);
+
    int nvidiaApi;
    hr = GetRegInt("Player", "UseNVidiaAPI", &nvidiaApi);
    if (hr != S_OK)
