@@ -17,6 +17,7 @@ VP 10.1.0 Changelog
   The normal hit event is also supported but decoupled from the animation, so if a hit event is fired the isdropped flag can still be false because it is set after the animation.
 - hotkeys.txt added
 - spinner and gate animation reworked
+- optional post-processing of the internal DMD (via scaleFX algorithm)
 - new core scripts by mfuegemann
 
 - DirectX 8 port for input handling (currently disabled)
